Some simple Protractor E2E tests.

--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,7 @@
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
-  <script src="components/stringCalculator/stringCalculator.js"></script>
+  <script src="components/stringCalculator/stringCalculator.service.js"></script>
+  <script src="components/stringCalculator/stringCalculator.directive.js"></script>
 </body>
 </html>
